# alpha_examples

./: demo_sample.parquet  pyproject.toml
demo_ai.html/: demo.html
src/data/: adapter.py
src/engine/: factor_engine.py
src/eval/: alphainspect_runner.py  lightbt_runner.py
src/label/: label_engine.py
src/orchestrator/: factor_orchestrator.py
src/store/: factor_store.py
src/tracking/: mlflow_logger.py
tests/: test_consistency_and_quality.py  test_data_adapter.py  test_factor_engine_expr_codegen.py  test_factor_store.py  test_label_engine.py  test_orchestrator_and_logging.py  test_tracking_and_evaluation.py
